{
  "version": 4,
  "terraform_version": "1.8.5",
  "serial": 95,
  "lineage": "69124555-2064-387b-f6df-8f158696d238",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0877184dcf002f25a",
            "arn": "arn:aws:ec2:us-east-1:351508743765:elastic-ip/eipalloc-0877184dcf002f25a",
            "domain": "vpc",
            "id": "eipalloc-0877184dcf002f25a",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-86-153-83.compute-1.amazonaws.com",
            "public_ip": "52.86.153.83",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "test-private-nat_gateway_eip",
              "Notes": "Created using Terraform code pulled from the Innovation launchpad building blocks repository."
            },
            "tags_all": {
              "Name": "test-private-nat_gateway_eip",
              "Notes": "Created using Terraform code pulled from the Innovation launchpad building blocks repository."
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:351508743765:internet-gateway/igw-026b7b0bd0cb00d18",
            "id": "igw-026b7b0bd0cb00d18",
            "owner_id": "351508743765",
            "tags": {
              "Name": "test-internet-gateway",
              "Notes": "Created using Terraform code pulled from the Innovation launchpad building blocks repository."
            },
            "tags_all": {
              "Name": "test-internet-gateway",
              "Notes": "Created using Terraform code pulled from the Innovation launchpad building blocks repository."
            },
            "vpc_id": "vpc-0513ab9b328fcff73"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0877184dcf002f25a",
            "association_id": "eipassoc-05732f14b568e8e64",
            "connectivity_type": "public",
            "id": "nat-027d93d98f9906f5f",
            "network_interface_id": "eni-0397162239e50062d",
            "private_ip": "10.0.131.6",
            "public_ip": "52.86.153.83",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-07eb252391086bf2c",
            "tags": {
              "Name": "test-nat-gatway",
              "Notes": "Created using Terraform code pulled from the Innovation launchpad building blocks repository."
            },
            "tags_all": {
              "Name": "test-nat-gatway",
              "Notes": "Created using Terraform code pulled from the Innovation launchpad building blocks repository."
            }
          },
          "dependencies": [
            "aws_eip.nat_gateway_eip",
            "aws_internet_gateway.internet_gateway",
            "aws_subnet.public_subnet_a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:351508743765:route-table/rtb-012d06019ff83172c",
            "id": "rtb-012d06019ff83172c",
            "owner_id": "351508743765",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-027d93d98f9906f5f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "test-private-route-table-a",
              "Notes": "Created using Terraform code pulled from the Innovation launchpad building blocks repository."
            },
            "tags_all": {
              "Name": "test-private-route-table-a",
              "Notes": "Created using Terraform code pulled from the Innovation launchpad building blocks repository."
            },
            "timeouts": null,
            "vpc_id": "vpc-0513ab9b328fcff73"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_gateway_eip",
            "aws_internet_gateway.internet_gateway",
            "aws_nat_gateway.nat_gateway",
            "aws_subnet.public_subnet_a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:351508743765:route-table/rtb-0723dbe171e39097e",
            "id": "rtb-0723dbe171e39097e",
            "owner_id": "351508743765",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-027d93d98f9906f5f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "test-private-route-table-b",
              "Notes": "Created using Terraform code pulled from the Innovation launchpad building blocks repository."
            },
            "tags_all": {
              "Name": "test-private-route-table-b",
              "Notes": "Created using Terraform code pulled from the Innovation launchpad building blocks repository."
            },
            "timeouts": null,
            "vpc_id": "vpc-0513ab9b328fcff73"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_gateway_eip",
            "aws_internet_gateway.internet_gateway",
            "aws_nat_gateway.nat_gateway",
            "aws_subnet.public_subnet_a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:351508743765:route-table/rtb-014f25a0ca1db4398",
            "id": "rtb-014f25a0ca1db4398",
            "owner_id": "351508743765",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-026b7b0bd0cb00d18",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "test-public-route-table",
              "Notes": "Created using Terraform code pulled from the Innovation launchpad building blocks repository."
            },
            "tags_all": {
              "Name": "test-public-route-table",
              "Notes": "Created using Terraform code pulled from the Innovation launchpad building blocks repository."
            },
            "timeouts": null,
            "vpc_id": "vpc-0513ab9b328fcff73"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route_table_association_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-063477a851229445d",
            "route_table_id": "rtb-012d06019ff83172c",
            "subnet_id": "subnet-015d5c7499e96c726"
          },
          "dependencies": [
            "aws_eip.nat_gateway_eip",
            "aws_internet_gateway.internet_gateway",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.private_route_table_a",
            "aws_subnet.private_subnet_a",
            "aws_subnet.public_subnet_a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route_table_association_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0448069b714bb39fb",
            "route_table_id": "rtb-0723dbe171e39097e",
            "subnet_id": "subnet-0284498a94530fcae"
          },
          "dependencies": [
            "aws_eip.nat_gateway_eip",
            "aws_internet_gateway.internet_gateway",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.private_route_table_b",
            "aws_subnet.private_subnet_b",
            "aws_subnet.public_subnet_a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_table_association_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b5819b1403e6c5a1",
            "route_table_id": "rtb-014f25a0ca1db4398",
            "subnet_id": "subnet-07eb252391086bf2c"
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet_a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_table_association_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-036db80feba3cf867",
            "route_table_id": "rtb-014f25a0ca1db4398",
            "subnet_id": "subnet-0adfa20bc58fd430b"
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet_b",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:351508743765:subnet/subnet-015d5c7499e96c726",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-015d5c7499e96c726",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "351508743765",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "test-private-subnet-a",
              "Notes": "Created using Terraform code pulled from the Innovation launchpad building blocks repository."
            },
            "tags_all": {
              "Name": "test-private-subnet-a",
              "Notes": "Created using Terraform code pulled from the Innovation launchpad building blocks repository."
            },
            "vpc_id": "vpc-0513ab9b328fcff73"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:351508743765:subnet/subnet-0284498a94530fcae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0284498a94530fcae",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "351508743765",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "test-private-subnet-b",
              "Notes": "Created using Terraform code pulled from the Innovation launchpad building blocks repository."
            },
            "tags_all": {
              "Name": "test-private-subnet-b",
              "Notes": "Created using Terraform code pulled from the Innovation launchpad building blocks repository."
            },
            "vpc_id": "vpc-0513ab9b328fcff73"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:351508743765:subnet/subnet-07eb252391086bf2c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.128.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07eb252391086bf2c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "351508743765",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "test-public-subnet-a",
              "Notes": "Created using Terraform code pulled from the Innovation launchpad building blocks repository."
            },
            "tags_all": {
              "Name": "test-public-subnet-a",
              "Notes": "Created using Terraform code pulled from the Innovation launchpad building blocks repository."
            },
            "vpc_id": "vpc-0513ab9b328fcff73"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:351508743765:subnet/subnet-0adfa20bc58fd430b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.144.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0adfa20bc58fd430b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "351508743765",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "test-public-subnet-b",
              "Notes": "Created using Terraform code pulled from the Innovation launchpad building blocks repository."
            },
            "tags_all": {
              "Name": "test-public-subnet-b",
              "Notes": "Created using Terraform code pulled from the Innovation launchpad building blocks repository."
            },
            "vpc_id": "vpc-0513ab9b328fcff73"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:351508743765:vpc/vpc-0513ab9b328fcff73",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0616bbc70685b4b67",
            "default_route_table_id": "rtb-06555b2e05d3cda61",
            "default_security_group_id": "sg-083ca7c28ff5464a1",
            "dhcp_options_id": "dopt-013c7305cf641bfbd",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0513ab9b328fcff73",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06555b2e05d3cda61",
            "owner_id": "351508743765",
            "tags": {
              "Name": "test-VPC",
              "Notes": "Created using Terraform code pulled from the Innovation launchpad building blocks repository."
            },
            "tags_all": {
              "Name": "test-VPC",
              "Notes": "Created using Terraform code pulled from the Innovation launchpad building blocks repository."
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3_private_endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:351508743765:vpc-endpoint/vpce-07e142b73bba3b413",
            "cidr_blocks": [
              "16.182.0.0/16",
              "18.34.0.0/19",
              "52.216.0.0/15",
              "54.231.0.0/16",
              "3.5.0.0/19",
              "18.34.232.0/21"
            ],
            "id": "vpce-07e142b73bba3b413",
            "owner_id": "351508743765",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "requester_managed": false,
            "service_name": "com.amazonaws.us-east-1.s3",
            "state": "available",
            "tags": {
              "Name": "test-s3-private-endpoint",
              "Notes": "Created using Terraform code pulled from the Innovation launchpad building blocks repository."
            },
            "tags_all": {
              "Name": "test-s3-private-endpoint",
              "Notes": "Created using Terraform code pulled from the Innovation launchpad building blocks repository."
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0513ab9b328fcff73"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    }
  ]
}